--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,70 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  text-decoration: none;
+  list-style: none;
+  outline: none;
 }
+body {
+  font-family: "vazir" !important;
+  direction: rtl;
+  background-color: rgb(73, 224, 149);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.container {
+  background-color: #f8f8f8;
+  margin: auto;
+  width: 700px;
+  padding: 30px;
+  padding-bottom: 50px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  box-shadow: 5px 5px 20px palevioletred;
+}
+h3{
+  font-size: 25px;
+  padding: 15px 0; 
+}
+.question{
+  margin-top: 30px;
+  padding: 15px;
+  border-radius:50px;
+  -webkit-border-radius:50px;
+  -moz-border-radius:50px;
+  -ms-border-radius:50px;
+  -o-border-radius:50px;
+  box-shadow:0 0 10px rgba(117,117,117,0.3) ;
+}
+.question header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.question p {
+  font-size: 15px;
+  color: #333;
+  margin-top: 15px;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+}
+.question button{
+ width: 40px;
+ height: 40px;
+ border-radius: 50%;
+ -webkit-border-radius: 50%;
+ -moz-border-radius: 50%;
+ -ms-border-radius: 50%;
+ -o-border-radius: 50%;
+ background-color: rgb(68,68,68);
+ border: none;
+ color: #fff;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ cursor: pointer;
 }
